# DocMind

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  SECURITY.md  app.py  pyproject.toml  render.yaml  requirements-docling.txt  requirements.txt
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-backend.yml  tests.yml
.streamlit/: config.toml
api/: __init__.py  auth.py  conversations.py  crypto.py  deps.py  main.py
api/routes/: auth.py  chat.py  conversations.py  ingest.py  settings.py
docmind/: __init__.py  chunking.py  config.py  embeddings.py  formatting.py  keyword_index.py  llm.py  logging_config.py  parsing.py  prompt.py  retrieval.py  session.py  validation.py  vector_store.py
tests/: fixtures.py  test_api_key_audit.py  test_e2e.py  test_generation.py  test_pipeline.py  test_validation.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/chat/: page.tsx
web/app/docs/: page.tsx
web/app/features/: page.tsx
web/app/login/: page.tsx
web/app/signup/: page.tsx
web/components/auth/: auth-form.tsx
web/components/chat/: chat-app.tsx  markdown.tsx  settings-dialog.tsx
web/components/layout/: footer.tsx  navbar.tsx  page-transition.tsx  theme-provider.tsx  theme-toggle.tsx
web/components/sections/: chat-demo.tsx  cta.tsx  features-grid.tsx  hero.tsx  how-it-works.tsx  page-header.tsx
web/components/three/: hero-scene.tsx  lazy.tsx  shader-background.tsx  strands.tsx
web/components/ui/: button.tsx  claude-style-chat-input.tsx  logo.tsx  reveal.tsx  textarea.tsx
web/lib/: api.ts  auth.tsx
