[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docmind"
version = "1.0.0"
description = "Ask questions. Get answers grounded strictly in your own documents."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kishan Raj", email = "kishanraj5822@gmail.com"}
]
keywords = ["rag", "retrieval-augmented-generation", "document-qa", "streamlit", "groq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
]
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.40.2",
    "python-dotenv==1.0.1",
    "filetype==1.2.0",
    "PyMuPDF==1.24.14",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "markdown==3.7",
    "pytesseract==0.3.13",
    "Pillow==11.0.0",
    "sentence-transformers==3.3.1",
    "torch==2.5.1",
    "tiktoken==0.8.0",
    "chromadb==1.5.9",
    "rank-bm25==0.2.2",
    "flashrank==0.2.9",
    "groq==0.13.1",
    "requests==2.34.2",
]

[project.optional-dependencies]
docling = [
    "docling==2.14.0",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/kishan5822/DocMind"
Documentation = "https://github.com/kishan5822/DocMind#readme"
Repository = "https://github.com/kishan5822/DocMind.git"
Issues = "https://github.com/kishan5822/DocMind/issues"

[tool.setuptools]
packages = ["docmind"]

[tool.setuptools.package-data]
docmind = []
